# cachelib

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/cachelib/: __init__.py  lrucache.py
src/cachelib.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_cache.py
