[project]
name = "cachelib"
version = "0.1.0"
description = "Thread-safe LRU cache with TTL and decorator support"
authors = [{ name="Faizan" }]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]